# CS5478_HomeBot

./: .gitignore  .gitmodules  README.md  stretch_sim.bash
realsense2_description/urdf/: _d435.urdf.xacro
robotiq_2finger_grippers/robotiq_2f_140_gripper_visualization/launch/: test_2f_140_model.launch
robotiq_2finger_grippers/robotiq_2f_140_gripper_visualization/urdf/: robotiq_arg2f.gazebo.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_2finger_grippers/robotiq_2f_85_gripper_visualization/launch/: test_2f_85_model.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: xamyab_robotiq_dual_action_server.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_server.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: robotiq_2f_gripper_driver.py
rviz_homebot_panel/: CMakeLists.txt  homebot_panel_plugin.xml  package.xml
rviz_homebot_panel/include/rviz_homebot_panel/: homebot_panel.hpp
rviz_homebot_panel/resource/: homebot_panel.ui
rviz_homebot_panel/src/: homebot_panel.cpp
task_handler/: CMakeLists.txt  Session.vim  package.xml
task_handler/include/task_handler/: moveit_client.hpp  task_handler.hpp  tf_handler.hpp
task_handler/launch/: tf.launch
task_handler/msg/: Object.msg  Objects.msg
task_handler/scripts/: stretch_identify_object_client.py  stretch_identify_object_server.py  stretch_image_capture.py  stretch_location_publisher.py  stretch_location_publisher_test.py  stretch_object_loc_publisher.py
task_handler/scripts/perception_model/Yolo11_retrained/: config.yaml
task_handler/src/: moveit_client.cpp  moveit_client_node.cpp  task_handler.cpp  task_handler_node.cpp  tf_handler.cpp
task_handler/srv/: GetObjects.srv  GoalTask.srv
