<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_homebot_panel</name>
  <version>0.0.0</version>
  <description>The rviz_homebot_panel package</description>
  <author email="brinashong@gmail.com">Brina Shong</author>
  <maintainer email="brinashong@gmail.com">Brina Shong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <rviz plugin="${prefix}/homebot_panel_plugin.xml"/>
  </export>

  </package>

